[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sun.png" type="Texture" id=1]
[ext_resource path="res://main/main.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 399.197

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 7.20001
margin_top = 8.8
margin_right = 472.2
margin_bottom = 29.8
text = "By pressing Space Key it will add a new planet to orbit around the sun"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planets" type="Node2D" parent="."]

[node name="MercuryPosition" type="Position2D" parent="Planets"]
position = Vector2( 223.643, 333.996 )

[node name="VenusPosition" type="Position2D" parent="Planets"]
position = Vector2( 339.569, 332.975 )

[node name="EarthPosition" type="Position2D" parent="Planets"]
position = Vector2( 463.369, 332.485 )

[node name="MarsPosition" type="Position2D" parent="Planets"]
position = Vector2( 600.143, 337.016 )

[node name="JupiterPosition" type="Position2D" parent="Planets"]
position = Vector2( 740.034, 341.547 )

[node name="SaturnPosition" type="Position2D" parent="Planets"]
position = Vector2( 863.224, 343.057 )

[node name="NeptunePosition" type="Position2D" parent="Planets"]
position = Vector2( 993.419, 344.567 )

[node name="UranusPosition" type="Position2D" parent="Planets"]
position = Vector2( 1144.25, 346.077 )

[node name="Sun" type="Area2D" parent="."]
position = Vector2( -270.531, 356.503 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Sun"]
scale = Vector2( 1.05566, 1.03699 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sun"]
shape = SubResource( 1 )
